--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "spassr": "^2.2.0",
     "svelte": "^3.29.4",
     "svelte-windicss-preprocess": "^2.1.5",
-    "tossr": "^1.3.1",
-    "windicss": "^2.1.16"
+    "tossr": "^1.3.1"
   },
   "routify": {
     "extensions": "svelte,html,svx,md"
