--- a/package.json
+++ b/package.json
@@ -1,58 +1,19 @@
 {
-  "name": "routify-app",
-  "version": "1.0.0",
-  "@comments scripts": {
-    "dev": "develop with blazing fast rebuilds",
-    "dev:features": "develop with features like SSR and serviceworker enabled",
-    "build": "run build scripts below",
-    "build:app": "build single page application (SPA)",
-    "build:static": "Generate static pages",
-    "serve": "serve content in 'dist' folder",
-    "rollup": "run the rollup bundler",
-    "nollup": "run the nollup no-bundler",
-    "routify": "run routify"
-  },
   "scripts": {
-    "dev": "run-p routify nollup",
-    "dev:ssr": "run-p routify rollup",
-    "build": "run-s build:*",
-    "build:app": "routify -b && rollup -c",
-    "build:static": "spank",
-    "serve": "spassr --ssr",
-    "rollup": "rollup -cw",
-    "nollup": "nollup -c",
-    "routify": "routify"
+    "dev": "routify -c dev:vite ",
+    "build": "svelte-check && routify -b && vite build",
+    "dev:vite": "vite",
+    "serve": "vite preview",
+    "validate": "svelte-check"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@roxi/routify": "^2.14.0",
-    "cross-env": "^7.0.2",
-    "fs-extra": "^9.0.1",
-    "nollup": "^0.13.13",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.33.1",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-hot": "^0.1.1",
-    "rollup-plugin-inject-process-env": "^1.3.1",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.1.0",
-    "rollup-plugin-svelte-hot": "^0.11.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-workbox": "^5.2.1",
-    "spank": "^1.5.1",
-    "spassr": "^2.2.0",
-    "svelte": "^3.35.0",
-    "svelte-windicss-preprocess": "^2.3.1",
-    "tossr": "^1.3.1"
-  },
-  "routify": {
-    "extensions": "svelte,html,svx,md"
-  },
-  "spassr": {},
-  "spank": {
-    "blacklist": [
-      "/example/modal/basic/4"
-    ]
+    "@roxi/routify": "^2.18.2",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.7",
+    "html-minifier": "^4.0.0",
+    "svelte": "^3.38.2",
+    "svelte-check": "^2.1.0",
+    "vite": "^2.3.7",
+    "vite-plugin-windicss": "^1.0.3",
+    "windicss": "^3.1.3"
   }
 }
